# latexcop

./: .env.example  .gitignore  LICENSE  README.md  progress_tracker.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-macos.yml
macos/Latexcop/: Package.swift  build-app.sh  package-dmg.sh
macos/Latexcop/Sources/Latexcop/: AddRepoView.swift  AppConfigStore.swift  AppModel.swift  LatexcopApp.swift  MenuBarView.swift  MinimalRepoRow.swift  Models.swift  RepoCardView.swift  StatusBarController.swift  TrackerRunner.swift
macos/Latexcop/scripts/: make-icon.swift
scripts/: crop-png.swift  mask-popover-png.swift  pad-png.swift  round-png-corners.swift
tests/: conftest.py  test_progress_tracker.py
